add main section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,44 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dawid Gardziński</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    asdf
+    <header class="header">
+      <div class="logo">
+        <img src="/src/icons/logo.svg" alt="logo">
+        <div class="logo__text">
+          <div class="text text--xl">
+            Dawid Gardziński
+          </div>
+          <div class="text text--m text--color-tertiary">
+            Web developer
+          </div>
+        </div>
+      </div>
+      <nav class="contact">
+        <img class="icon icon--xl" src="/src/icons/mail.svg" alt="mail">
+        <img class="icon icon--xl" src="/src/icons/github.svg" alt="github">
+        <img class="icon icon--xl" src="/src/icons/linkedin.svg" alt="linkedin">
+      </nav>
+    </header>
+
+    <main class="main">
+      <section class="start grid">
+        <h1 class="start__h1">Hi.</h1>
+        <div class="start__next-section-wrapper">
+          <button class="start__next-section-button">
+            <img class="icon" src="/src/icons/blueArrow.svg" alt="mail">
+          </button>
+        </div>
+      </section>
+
+      <section class="about grid">
+      </section>
+    </main>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
