add about me section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
       </section>
 
       <section class="about grid">
+        <h2 class="about__header">about me</h2>
+        <p class="about__text">Im developer with asdfasd fasdf kjdskajf lkasdjf;kl jw;klqej rl;kasjd;flk jqwej riasjdflk jasd;lfj lkasdjf j;alksdjf;j as;dkljfl; jasdjf j asdf asdfj lkasdjflk jqweri jasdojf poeqwjrp jaslkcdnvl nzxlnf oqhowr 9sdf jas;kdjfl; mwql;erl ;jo;ijsa;dfj ;lasl;kdf;lk jas;ldjf;lk jasl;kdfj;l ;qjwl ;ji;adsjf ;jqwe jprj padjsfj pojqwerp poasdfi paisdof opaisodfp iasodifpo iqpe</p>
+        <div class="about__logo">
+          <img class="about__image" src="src/images/logo-big.svg" />
+        </div>
       </section>
     </main>
 
