--- a/index.html
+++ b/index.html
@@ -41,9 +41,52 @@
 
       <section class="about grid">
         <h2 class="about__header">about me</h2>
-        <p class="about__text">Im developer with asdfasd fasdf kjdskajf lkasdjf;kl jw;klqej rl;kasjd;flk jqwej riasjdflk jasd;lfj lkasdjf j;alksdjf;j as;dkljfl; jasdjf j asdf asdfj lkasdjflk jqweri jasdojf poeqwjrp jaslkcdnvl nzxlnf oqhowr 9sdf jas;kdjfl; mwql;erl ;jo;ijsa;dfj ;lasl;kdf;lk jas;ldjf;lk jasl;kdfj;l ;qjwl ;ji;adsjf ;jqwe jprj padjsfj pojqwerp poasdfi paisdof opaisodfp iasodifpo iqpe</p>
+        <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius ipsum sapien, eu imperdiet tortor sagittis quis. Quisque posuere commodo lectus, quis sagittis dolor rhoncus tempor. Mauris fringilla turpis ut sodales laoreet. Donec et orci aliquet, laoreet urna non, rutrum libero. Mauris quis tristique felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed tortor nibh. Donec id ligula eget libero scelerisque imperdiet non vel est. Nam vulputate quam ut maximus pretium. Praesent vestibulum nec orci auctor malesuada</p>
         <div class="about__logo">
           <img class="about__image" src="src/images/logo-big.svg" />
+        </div>
+      </section>
+
+      <section class="experience-and-education grid">
+        <div class="experience">
+          <h3 class="experience-and-education__header">Experience</h3>
+          <ul class="experience-and-education__list">
+            <li class="experience-and-education__item experience-and-education__item--checked">Non-commercial
+              <div class="experience-and-education__item-date">2015 - </div>
+            </li>
+            <li class="experience-and-education__item experience-and-education__item--checked">Wirtualna Polska
+              <div class="experience-and-education__item-date">2020 - </div>
+            </li>
+            <li class="experience-and-education__item">...<div class="experience-and-education__item-date">...</div></li>
+          </ul>
+        </div>
+        <div class="education">
+          <h3 class="experience-and-education__header">Education</h3>
+          <ul class="experience-and-education__list">
+            <li class="experience-and-education__item experience-and-education__item--checked">High school
+              <div class="experience-and-education__item-date">2016 - 2020 </div>
+            </li>
+            <li class="experience-and-education__item experience-and-education__item--checked">Warsaw School of Information Technology (WIT)
+              <div class="experience-and-education__item-date">2021 - </div>
+            </li>
+            <li class="experience-and-education__item">...<div class="experience-and-education__item-date">...</div></li>
+          </ul>
+        </div>
+        <div class="certs">
+          <h3 class="experience-and-education__header">Certs</h3>
+          <ul class="experience-and-education__list">
+            <li class="experience-and-education__item experience-and-education__item--checked">E12 - Montaż i eksploatacja komputerów osobistych oraz urządzeń peryferyjnych
+              <div class="experience-and-education__item-issuer">Okręgowa komisja egzaminacyjna w Warszawie</div>
+            </li>
+            <li class="experience-and-education__item experience-and-education__item--checked">E13 - Projektowanie lokalnych sieci komputerowych i administrowanie sieciami
+              <div class="experience-and-education__item-issuer">Okręgowa komisja egzaminacyjna w Warszawie</div></li>
+            <li class="experience-and-education__item experience-and-education__item--checked">E14 - Tworzenie aplikacji internetowych i baz danych oraz administrowanie bazami
+              <div class="experience-and-education__item-issuer">Okręgowa komisja egzaminacyjna w Warszawie</div></li>
+            <li class="experience-and-education__item experience-and-education__item--checked">IT Technician
+              <div class="experience-and-education__item-issuer">Okręgowa komisja egzaminacyjna w Warszawie</div></li>
+            <li class="experience-and-education__item experience-and-education__item--checked">Database Administrator
+              <div class="experience-and-education__item-issuer">VCC</div></li>
+          </ul>
         </div>
       </section>
     </main>
