add projects section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
           </ul>
         </div>
       </section>
+
+      <section class="projects grid">
+        <h2 class="projects__header">
+          Projects
+        </h2>
+        <div class="project project--first"></div>
+        <div class="project project--second"></div>
+        <div class="project project--third"></div>
+      </section>
     </main>
 
     <script type="module" src="/src/main.ts"></script>
