add footer and fix backgrounds

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
         <div class="project project--third"></div>
       </section>
     </main>
+    <footer class="footer">
+      Dawid Gardziński &copy; 2023
+    </footer>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
