--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </section>
 
       <section class="about grid">
-        <h2 class="about__header">about me</h2>
+        <h2 class="about__header">About me</h2>
         <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius ipsum sapien, eu imperdiet tortor sagittis quis. Quisque posuere commodo lectus, quis sagittis dolor rhoncus tempor. Mauris fringilla turpis ut sodales laoreet. Donec et orci aliquet, laoreet urna non, rutrum libero. Mauris quis tristique felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed tortor nibh. Donec id ligula eget libero scelerisque imperdiet non vel est. Nam vulputate quam ut maximus pretium. Praesent vestibulum nec orci auctor malesuada</p>
         <div class="about__logo">
           <img class="about__image" src="src/images/logo-big.svg" />
