--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
         <img class="icon icon--xl" src="/src/icons/github.svg" alt="github">
         <img class="icon icon--xl" src="/src/icons/linkedin.svg" alt="linkedin">
       </nav>
+      <nav class="mobile-nav">
+        <input id="hamburgerCheckbox" class="hamburger-checkbox" type="checkbox" ></input>
+        <label tabindex="0" role="button" class="hamburger" for="hamburgerCheckbox">
+          <div class="hamburger__line"></div>
+          <div class="hamburger__line"></div>
+          <div class="hamburger__line"></div>
+          <ul id="mobile-nav-list" class="mobile-nav-list">
+            <li><a class="mobile-nav-list__item" href="#about">About me</a></li>
+            <li><a class="mobile-nav-list__item" href="#experience-and-education">Experience</a></li>
+            <li><a class="mobile-nav-list__item" href="#experience-and-education">Educations</a></li>
+          </ul>
+        </label>
+
+
+      </nav>
     </header>
 
     <main class="main">
@@ -38,16 +53,17 @@
           </button>
         </div>
       </section>
-
-      <section class="about grid">
+      <div class="background-gradient"></div>
+      <section id="about" class="about grid">
         <h2 class="about__header">About me</h2>
-        <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur varius ipsum sapien, eu imperdiet tortor sagittis quis. Quisque posuere commodo lectus, quis sagittis dolor rhoncus tempor. Mauris fringilla turpis ut sodales laoreet. Donec et orci aliquet, laoreet urna non, rutrum libero. Mauris quis tristique felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed tortor nibh. Donec id ligula eget libero scelerisque imperdiet non vel est. Nam vulputate quam ut maximus pretium. Praesent vestibulum nec orci auctor malesuada</p>
+        <p class="about__text">I am a web developer who specializes in creating web applications. I have skills in both frontend design and development (HTML, CSS, TypeScript) as well as backend development (Node.js, PostgreSQL, MongoDB, Golang), allowing me to create comprehensive solutions for clients. I always prioritize the efficiency, usability, and scalability of projects, as well as constantly improving my skills. I have over 3 years of professional experience in programming and over 8 years of non-professional. </p>
         <div class="about__logo">
           <img class="about__image" src="src/images/logo-big.svg" />
         </div>
       </section>
+      <div class="background-gradient background-gradient--180deg"></div>
 
-      <section class="experience-and-education grid">
+      <section id="experience-and-education" class="experience-and-education grid">
         <div class="experience">
           <h3 class="experience-and-education__header">Experience</h3>
           <ul class="experience-and-education__list">
