--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               <li><a class="nav-list__item" href="#experience-and-education">Experience</a></li>
               <li><a class="nav-list__item" href="#experience-and-education">Educations</a></li>
               <li><a class="nav-list__item" href="#projects">Projects</a></li>
+              <li><a class="nav-list__item" href="#faq">FAQ</a></li>
               <li class="nav-list__item nav-list__socials"><img class="icon" src="/src/icons/github.svg" alt="github">
                 <img class="icon" src="/src/icons/linkedin.svg" alt="linkedin"></li>
             </ul>
@@ -61,7 +62,7 @@
         <h2 class="about__header">About me</h2>
         <p class="about__text">I am a web developer who specializes in creating web applications. I have skills in both frontend design and development (HTML, CSS, TypeScript) as well as backend development (Node.js, PostgreSQL, MongoDB, Golang), allowing me to create comprehensive solutions for clients. I always prioritize the efficiency, usability, and scalability of projects, as well as constantly improving my skills. I have over 3 years of professional experience in programming and over 8 years of non-professional. </p>
         <div class="about__logo">
-          <img class="about__image" src="src/images/logo-big.svg" alt="logo" />
+          <img class="about__image" width="300px" height="300px" src="src/images/logo-big.svg" alt="logo" />
         </div>
       </section>
       <div class="background-gradient background-gradient--180deg"></div>
@@ -118,8 +119,45 @@
         <div class="project project--third"></div>
       </section>
     </main>
-    <footer class="footer">
-      Dawid Gardziński &copy; 2023
+    <div class="background-gradient"></div>
+    <footer class="footer grid">
+      <section id="faq" class="faq">
+        <ul class="faq-list">
+          <li>
+            <input id="question1" class="faq-checkbox" type="checkbox" ></input>
+            <label for="question1" class="faq__QNA"><h4 class="faq__question">Question 1</h4>
+              <p class="faq__answer">sadfasdfasdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklfjnalsjdfjlkas jflkjasdlkjfkl jasdljias j</p>
+            </label>
+          </li>
+          <li>
+            <input id="question2" class="faq-checkbox" type="checkbox" ></input>
+            <label for="question2" class="faq__QNA">
+              <h4 class="faq__question">Question 2</h4>
+              <p class="faq__answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod laborum quas, ullam possimus assumenda, laboriosam error odit natus reiciendis recusandae consectetur veritatis officiis soluta cum in maxime? Minus, obcaecati quisquam.
+              Nostrum qui dolore odio eum. Consequuntur quasi quia dolore sunt saepe provident aspernatur iste dicta pariatur, cupiditate obcaecati magni exercitationem quos nulla at corporis repellendus molestias temporibus, ipsum fuga et!
+              Labore, id aliquam! Repellendus illum accusantium nostrum veritatis ipsam, totam officia, maiores fugit, est magnam culpa exercitationem magni animi consequuntur labore tempore in nihil a soluta laborum harum aspernatur possimus?
+              Hic dicta error aliquam nisi eius earum, dolor nihil aperiam explicabo corporis. Ut nesciunt harum inventore labore blanditiis esse tempore, libero aliquam est sequi odio rerum nihil, totam sint sunt!
+              Amet molestias, reiciendis, aspernatur ut nihil inventore repudiandae dicta minima nostrum eligendi labore rerum doloribus blanditiis accusamus sit. Commodi officiis consequatur illo voluptatibus corporis nemo velit excepturi recusandae sapiente deleniti?</p>
+            </label>
+          </li>
+          <li>
+            <input id="question3" class="faq-checkbox" type="checkbox" ></input>
+            <label for="question3" class="faq__QNA"><h4 class="faq__question">Question 3</h4>
+              <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo voluptate est velit, nam sunt id officia temporibus, iste magnam adipisci voluptatibus doloremque eligendi eius hic aspernatur quae fugit, atque cumque?</p>
+            </label>
+          </li>
+          <li>
+            <input id="question4" class="faq-checkbox" type="checkbox" ></input>
+            <label for="question4" class="faq__QNA"><h4 class="faq__question">Question 4</h4>
+              <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit optio molestiae aperiam nulla voluptatum tenetur veniam nemo assumenda, possimus accusantium excepturi dolor adipisci iure vitae ipsa commodi voluptatibus officia impedit?
+              Numquam, architecto. Fugit ipsa, sint deleniti qui maiores cum, unde eligendi illum eius, dolores assumenda adipisci officia! Amet saepe, enim itaque et in architecto non autem, dolores tempora, veniam dicta!</p>
+            </label>
+          </li>
+        </ul>
+      </section>
+      <div class="signature">
+        Dawid Gardziński &copy; 2023
+      </div>
     </footer>
 
     <script type="module" src="/src/main.ts"></script>
