handle arrow entry button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section class="start grid">
         <h1 class="start__h1">Hi.</h1>
         <div class="start__next-section-wrapper">
-          <button class="start__next-section-button">
+          <button id="startButton" class="start__next-section-button js-disabled">
             <img class="icon" src="/src/icons/blueArrow.svg" alt="mail">
           </button>
         </div>
