add key handling to hamburger

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img class="icon icon--hide-on-mobile" src="/src/icons/linkedin.svg" alt="linkedin">
         <div class="nav">
           <input id="hamburgerCheckbox" class="hamburger-checkbox" type="checkbox" ></input>
-          <label tabindex="0" role="button" class="hamburger" for="hamburgerCheckbox">
+          <label tabindex="0" role="button" class="hamburger" for="hamburgerCheckbox" id="hamburgerCheckboxLabel">
             <div class="hamburger__line"></div>
             <div class="hamburger__line"></div>
             <div class="hamburger__line"></div>
