add social links

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         </div>
       </div>
       <nav class="contact">
-        <img class="icon icon--hide-on-mobile" src="/src/icons/github.svg" alt="github">
-        <img class="icon icon--hide-on-mobile" src="/src/icons/linkedin.svg" alt="linkedin">
+        <a href="https://github.com/DawidGardzinski" target="_blank">
+          <img class="icon icon--hide-on-mobile" src="/src/icons/github.svg" alt="github">
+        </a>
+        <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank">
+          <img class="icon icon--hide-on-mobile" src="/src/icons/linkedin.svg" alt="linkedin">
+        </a>
         <div class="nav">
           <input id="hamburgerCheckbox" class="hamburger-checkbox" type="checkbox" ></input>
           <label tabindex="0" role="button" class="hamburger" for="hamburgerCheckbox" id="hamburgerCheckboxLabel">
@@ -40,8 +44,13 @@
               <li><a class="nav-list__item" href="#experience-and-education">Educations</a></li>
               <li><a class="nav-list__item" href="#projects">Projects</a></li>
               <li><a class="nav-list__item" href="#faq">FAQ</a></li>
-              <li class="nav-list__item nav-list__socials"><img class="icon" src="/src/icons/github.svg" alt="github">
-                <img class="icon" src="/src/icons/linkedin.svg" alt="linkedin"></li>
+              <li class="nav-list__item nav-list__socials">
+                <a href="https://github.com/DawidGardzinski" target="_blank">
+                  <img class="icon" src="/src/icons/github.svg" alt="github">
+                </a>
+                <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank">
+                  <img class="icon" src="/src/icons/linkedin.svg" alt="linkedin"></li>
+                </a>
             </ul>
           </label>
         </div>
