remove unnecessary slashes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Dawid Gardziński</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <div class="logo">
-        <img src="/src/icons/logo.svg" alt="logo">
+        <img width="66" height="69" src="/src/icons/logo.svg" alt="logo">
         <div class="logo__text">
           <div class="text text--xl">
             Dawid Gardziński
@@ -33,7 +33,7 @@
           <img class="icon icon--hide-on-mobile" src="/src/icons/linkedin.svg" alt="linkedin">
         </a>
         <div class="nav">
-          <input id="hamburgerCheckbox" class="hamburger-checkbox" type="checkbox" ></input>
+          <input id="hamburgerCheckbox" class="hamburger-checkbox" type="checkbox" >
           <label tabindex="0" role="button" class="hamburger" for="hamburgerCheckbox" id="hamburgerCheckboxLabel">
             <div class="hamburger__line"></div>
             <div class="hamburger__line"></div>
@@ -45,12 +45,13 @@
               <li><a class="nav-list__item" href="#projects">Projects</a></li>
               <li><a class="nav-list__item" href="#faq">FAQ</a></li>
               <li class="nav-list__item nav-list__socials">
-                <a href="https://github.com/DawidGardzinski" target="_blank">
+                <a href="https://github.com/DawidGardzinski" target="_blank" >
                   <img class="icon" src="/src/icons/github.svg" alt="github">
                 </a>
                 <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank">
-                  <img class="icon" src="/src/icons/linkedin.svg" alt="linkedin"></li>
+                  <img class="icon" src="/src/icons/linkedin.svg" alt="linkedin">
                 </a>
+              </li>
             </ul>
           </label>
         </div>
@@ -71,7 +72,7 @@
         <h2 class="about__header">About me</h2>
         <p class="about__text">I am a web developer who specializes in creating web applications. I have skills in both frontend design and development (HTML, CSS, TypeScript) as well as backend development (Node.js, PostgreSQL, MongoDB, Golang), allowing me to create comprehensive solutions for clients. I always prioritize the efficiency, usability, and scalability of projects, as well as constantly improving my skills. I have over 3 years of professional experience in programming and over 8 years of non-professional. </p>
         <div class="about__logo">
-          <img class="about__image" width="300px" height="300px" src="src/images/logo-big.svg" alt="logo" />
+          <img class="about__image" width="300" height="300" src="src/images/logo-big.svg" alt="logo" >
         </div>
       </section>
       <div class="background-gradient background-gradient--180deg"></div>
@@ -133,15 +134,15 @@
       <section id="faq" class="faq">
         <ul class="faq-list">
           <li>
-            <input id="question1" class="faq-checkbox" type="checkbox" ></input>
-            <label for="question1" class="faq__QNA"><h4 class="faq__question">Question 1</h4>
+            <input id="question1" class="faq-checkbox" type="checkbox" >
+            <label for="question1" class="faq__QNA"><p class="faq__question">Question 1</p>
               <p class="faq__answer">sadfasdfasdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklfjnalsjdfjlkas jflkjasdlkjfkl jasdljias j</p>
             </label>
           </li>
           <li>
-            <input id="question2" class="faq-checkbox" type="checkbox" ></input>
+            <input id="question2" class="faq-checkbox" type="checkbox" >
             <label for="question2" class="faq__QNA">
-              <h4 class="faq__question">Question 2</h4>
+              <p class="faq__question">Question 2</p>
               <p class="faq__answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod laborum quas, ullam possimus assumenda, laboriosam error odit natus reiciendis recusandae consectetur veritatis officiis soluta cum in maxime? Minus, obcaecati quisquam.
               Nostrum qui dolore odio eum. Consequuntur quasi quia dolore sunt saepe provident aspernatur iste dicta pariatur, cupiditate obcaecati magni exercitationem quos nulla at corporis repellendus molestias temporibus, ipsum fuga et!
               Labore, id aliquam! Repellendus illum accusantium nostrum veritatis ipsam, totam officia, maiores fugit, est magnam culpa exercitationem magni animi consequuntur labore tempore in nihil a soluta laborum harum aspernatur possimus?
@@ -150,14 +151,14 @@
             </label>
           </li>
           <li>
-            <input id="question3" class="faq-checkbox" type="checkbox" ></input>
-            <label for="question3" class="faq__QNA"><h4 class="faq__question">Question 3</h4>
+            <input id="question3" class="faq-checkbox" type="checkbox" >
+            <label for="question3" class="faq__QNA"><p class="faq__question">Question 3</p>
               <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo voluptate est velit, nam sunt id officia temporibus, iste magnam adipisci voluptatibus doloremque eligendi eius hic aspernatur quae fugit, atque cumque?</p>
             </label>
           </li>
           <li>
-            <input id="question4" class="faq-checkbox" type="checkbox" ></input>
-            <label for="question4" class="faq__QNA"><h4 class="faq__question">Question 4</h4>
+            <input id="question4" class="faq-checkbox" type="checkbox" >
+            <label for="question4" class="faq__QNA"><p class="faq__question">Question 4</p>
               <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit optio molestiae aperiam nulla voluptatum tenetur veniam nemo assumenda, possimus accusantium excepturi dolor adipisci iure vitae ipsa commodi voluptatibus officia impedit?
               Numquam, architecto. Fugit ipsa, sint deleniti qui maiores cum, unde eligendi illum eius, dolores assumenda adipisci officia! Amet saepe, enim itaque et in architecto non autem, dolores tempora, veniam dicta!</p>
             </label>
