--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
         </a>
         <div class="nav">
           <input id="hamburgerCheckbox" class="hamburger-checkbox" type="checkbox" >
-          <label tabindex="0" role="button" class="hamburger" for="hamburgerCheckbox" id="hamburgerCheckboxLabel">
-            <div class="hamburger__line"></div>
-            <div class="hamburger__line"></div>
-            <div class="hamburger__line"></div>
-            <ul id="nav-list" class="nav-list">
-              <li><a class="nav-list__item" href="#about">About me</a></li>
-              <li><a class="nav-list__item" href="#experience-and-education">Experience</a></li>
-              <li><a class="nav-list__item" href="#experience-and-education">Educations</a></li>
-              <li><a class="nav-list__item" href="#projects">Projects</a></li>
-              <li><a class="nav-list__item" href="#faq">FAQ</a></li>
-              <li class="nav-list__item nav-list__socials">
-                <a href="https://github.com/DawidGardzinski" target="_blank" >
-                  <img class="icon" src="/src/icons/github.svg" alt="github">
-                </a>
-                <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank">
-                  <img class="icon" src="/src/icons/linkedin.svg" alt="linkedin">
-                </a>
-              </li>
-            </ul>
+          <label tabindex="0" class="hamburger" for="hamburgerCheckbox" id="hamburgerCheckboxLabel">
+            <span class="hamburger__line"></span>
+            <span class="hamburger__line"></span>
+            <span class="hamburger__line"></span>
           </label>
+          <ul id="nav-list" class="nav-list">
+            <li><a class="nav-list__item" href="#about">About me</a></li>
+            <li><a class="nav-list__item" href="#experience-and-education">Experience</a></li>
+            <li><a class="nav-list__item" href="#experience-and-education">Educations</a></li>
+            <li><a class="nav-list__item" href="#projects">Projects</a></li>
+            <li><a class="nav-list__item" href="#faq">FAQ</a></li>
+            <li class="nav-list__item nav-list__socials">
+              <a href="https://github.com/DawidGardzinski" target="_blank" >
+                <img class="icon" src="/src/icons/github.svg" alt="github">
+              </a>
+              <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank">
+                <img class="icon" src="/src/icons/linkedin.svg" alt="linkedin">
+              </a>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
@@ -132,36 +132,37 @@
     <div class="background-gradient"></div>
     <footer class="footer grid">
       <section id="faq" class="faq">
+        <h2 class="faq__header">FAQ</h2>
         <ul class="faq-list">
-          <li>
+          <li class="faq-list__item">
             <input id="question1" class="faq-checkbox" type="checkbox" >
-            <label for="question1" class="faq__QNA"><p class="faq__question">Question 1</p>
-              <p class="faq__answer">sadfasdfasdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklfjnalsjdfjlkas jflkjasdlkjfkl jasdljias j</p>
+            <label for="question1" class="faq__question">Question 1
             </label>
+            <p class="faq__answer">sadfasdfasdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklfjnalsjdfjlkas jflkjasdlkjfkl jasdljias j</p>
           </li>
-          <li>
+          <li class="faq-list__item">
             <input id="question2" class="faq-checkbox" type="checkbox" >
-            <label for="question2" class="faq__QNA">
-              <p class="faq__question">Question 2</p>
-              <p class="faq__answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod laborum quas, ullam possimus assumenda, laboriosam error odit natus reiciendis recusandae consectetur veritatis officiis soluta cum in maxime? Minus, obcaecati quisquam.
-              Nostrum qui dolore odio eum. Consequuntur quasi quia dolore sunt saepe provident aspernatur iste dicta pariatur, cupiditate obcaecati magni exercitationem quos nulla at corporis repellendus molestias temporibus, ipsum fuga et!
-              Labore, id aliquam! Repellendus illum accusantium nostrum veritatis ipsam, totam officia, maiores fugit, est magnam culpa exercitationem magni animi consequuntur labore tempore in nihil a soluta laborum harum aspernatur possimus?
-              Hic dicta error aliquam nisi eius earum, dolor nihil aperiam explicabo corporis. Ut nesciunt harum inventore labore blanditiis esse tempore, libero aliquam est sequi odio rerum nihil, totam sint sunt!
-              Amet molestias, reiciendis, aspernatur ut nihil inventore repudiandae dicta minima nostrum eligendi labore rerum doloribus blanditiis accusamus sit. Commodi officiis consequatur illo voluptatibus corporis nemo velit excepturi recusandae sapiente deleniti?</p>
+            <label for="question2" class="faq__question">
+              Question 2
             </label>
+            <p class="faq__answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod laborum quas, ullam possimus assumenda, laboriosam error odit natus reiciendis recusandae consectetur veritatis officiis soluta cum in maxime? Minus, obcaecati quisquam.
+            Nostrum qui dolore odio eum. Consequuntur quasi quia dolore sunt saepe provident aspernatur iste dicta pariatur, cupiditate obcaecati magni exercitationem quos nulla at corporis repellendus molestias temporibus, ipsum fuga et!
+            Labore, id aliquam! Repellendus illum accusantium nostrum veritatis ipsam, totam officia, maiores fugit, est magnam culpa exercitationem magni animi consequuntur labore tempore in nihil a soluta laborum harum aspernatur possimus?
+            Hic dicta error aliquam nisi eius earum, dolor nihil aperiam explicabo corporis. Ut nesciunt harum inventore labore blanditiis esse tempore, libero aliquam est sequi odio rerum nihil, totam sint sunt!
+            Amet molestias, reiciendis, aspernatur ut nihil inventore repudiandae dicta minima nostrum eligendi labore rerum doloribus blanditiis accusamus sit. Commodi officiis consequatur illo voluptatibus corporis nemo velit excepturi recusandae sapiente deleniti?</p>
           </li>
-          <li>
+          <li class="faq-list__item">
             <input id="question3" class="faq-checkbox" type="checkbox" >
-            <label for="question3" class="faq__QNA"><p class="faq__question">Question 3</p>
-              <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo voluptate est velit, nam sunt id officia temporibus, iste magnam adipisci voluptatibus doloremque eligendi eius hic aspernatur quae fugit, atque cumque?</p>
+            <label for="question3" class="faq__question">Question 3
             </label>
+            <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo voluptate est velit, nam sunt id officia temporibus, iste magnam adipisci voluptatibus doloremque eligendi eius hic aspernatur quae fugit, atque cumque?</p>
           </li>
-          <li>
+          <li class="faq-list__item">
             <input id="question4" class="faq-checkbox" type="checkbox" >
-            <label for="question4" class="faq__QNA"><p class="faq__question">Question 4</p>
-              <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit optio molestiae aperiam nulla voluptatum tenetur veniam nemo assumenda, possimus accusantium excepturi dolor adipisci iure vitae ipsa commodi voluptatibus officia impedit?
-              Numquam, architecto. Fugit ipsa, sint deleniti qui maiores cum, unde eligendi illum eius, dolores assumenda adipisci officia! Amet saepe, enim itaque et in architecto non autem, dolores tempora, veniam dicta!</p>
+            <label for="question4" class="faq__question">Question 4
             </label>
+            <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit optio molestiae aperiam nulla voluptatum tenetur veniam nemo assumenda, possimus accusantium excepturi dolor adipisci iure vitae ipsa commodi voluptatibus officia impedit?
+            Numquam, architecto. Fugit ipsa, sint deleniti qui maiores cum, unde eligendi illum eius, dolores assumenda adipisci officia! Amet saepe, enim itaque et in architecto non autem, dolores tempora, veniam dicta!</p>
           </li>
         </ul>
       </section>
