--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
       </div>
       <nav class="contact">
-        <a href="https://github.com/DawidGardzinski" target="_blank">
+        <a href="https://github.com/DawidGardzinski" target="_blank" aria-label="link to my github account">
           <img class="icon icon--hide-on-mobile" src="/src/icons/github.svg" alt="github">
         </a>
-        <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank">
+        <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank" aria-label="link to my linkedin account">
           <img class="icon icon--hide-on-mobile" src="/src/icons/linkedin.svg" alt="linkedin">
         </a>
         <div class="nav">
@@ -46,10 +46,10 @@
             <li><a class="nav-list__item" href="#projects">Projects</a></li>
             <li><a class="nav-list__item" href="#faq">FAQ</a></li>
             <li class="nav-list__item nav-list__socials">
-              <a href="https://github.com/DawidGardzinski" target="_blank" >
+              <a href="https://github.com/DawidGardzinski" target="_blank" aria-label="link to my github account" >
                 <img class="icon" src="/src/icons/github.svg" alt="github">
               </a>
-              <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank">
+              <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/" target="_blank" aria-label="link to my linkedin account">
                 <img class="icon" src="/src/icons/linkedin.svg" alt="linkedin">
               </a>
             </li>
