add typewriter animation

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <main class="main">
       <section class="start grid">
-        <h1 class="start__h1">Hi.</h1>
+        <h1 id="typewriter" class="start__h1">Hi.</h1>
         <div class="start__next-section-wrapper">
           <button id="startButton" class="start__next-section-button js-disabled">
             <img class="icon" src="/src/icons/blueArrow.svg" alt="mail">
