--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dawid Gardziński</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" rel="preconnect" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet preload" as="style">
     <meta name="description" content="Web developer portfolio">
     <meta name="keywords" content="web, development, programmer, developer, backend, frontend">
     <meta name="author" content="Dawid Gardziński">
