fill faq section

--- a/index.html
+++ b/index.html
@@ -147,33 +147,49 @@
         <ul class="faq-list">
           <li class="faq-list__item">
             <input id="question1" class="faq-checkbox" type="checkbox" >
-            <label for="question1" class="faq__question">Question 1
+            <label for="question1" class="faq__question">What tools did you use to create this website?
             </label>
-            <p class="faq__answer">sadfasdfasdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklsdfasfs shafjkhaso kdjfoasj fiasdof asdfajsklfjnalsjdfjlkas jflkjasdlkjfkl jasdljias j</p>
+            <div class="faq__answer">This is a portfolio-type website, so using frameworks in this case would be overengineering. Specifically, apart from pure HTML and CSS, I used <a href="https://www.typescriptlang.org/">TypeScript</a> for writing the code. As for any external libraries working at runtime, I used <a href="https://lodash.com/">Lodash</a>. When it comes to development, I used <a href="https://vitejs.dev/">Vite</a> as a builder and <a href="https://www.npmjs.com/package/gh-pages">gh-pages</a> for deployment. It was also very important for me to make sure that the website is accessible for people with JavaScript disabled and with disabilities, so I made sure to create it that way. <br> <br>
+            Helpfull tools:
+              <ul>
+                <li><a href="https://validator.w3.org/">validator.w3c</a> - to check HTML issues</li>
+                <li><a href="https://pagespeed.web.dev/">pagespeed.web</a> - to check site speed, core vitals etc. &#40;lab data&#41;</li>
+                <li><a href="https://www.w3.org/WAI/">w3 WAI</a> - to check the impact of decisions on accessibility</li>
+                <li><a href="https://developer.mozilla.org/en-US/">MDN</a> - best web documentation</li>
+                <li><a href="https://webaim.org/resources/contrastchecker/">contrast checker</a> - just as the name suggests</li>
+              </ul>
+            </div>
           </li>
           <li class="faq-list__item">
             <input id="question2" class="faq-checkbox" type="checkbox" >
             <label for="question2" class="faq__question">
-              Question 2
+              How to make hamburger menu/parallax/typer?
             </label>
-            <p class="faq__answer">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod laborum quas, ullam possimus assumenda, laboriosam error odit natus reiciendis recusandae consectetur veritatis officiis soluta cum in maxime? Minus, obcaecati quisquam.
-            Nostrum qui dolore odio eum. Consequuntur quasi quia dolore sunt saepe provident aspernatur iste dicta pariatur, cupiditate obcaecati magni exercitationem quos nulla at corporis repellendus molestias temporibus, ipsum fuga et!
-            Labore, id aliquam! Repellendus illum accusantium nostrum veritatis ipsam, totam officia, maiores fugit, est magnam culpa exercitationem magni animi consequuntur labore tempore in nihil a soluta laborum harum aspernatur possimus?
-            Hic dicta error aliquam nisi eius earum, dolor nihil aperiam explicabo corporis. Ut nesciunt harum inventore labore blanditiis esse tempore, libero aliquam est sequi odio rerum nihil, totam sint sunt!
-            Amet molestias, reiciendis, aspernatur ut nihil inventore repudiandae dicta minima nostrum eligendi labore rerum doloribus blanditiis accusamus sit. Commodi officiis consequatur illo voluptatibus corporis nemo velit excepturi recusandae sapiente deleniti?</p>
+            <div class="faq__answer">Check my simplified snippets and figure it out by yourself:
+              <ul>
+                <li><a href="https://codepen.io/dawidgardzinski/pen/QWVQKVq">parallax</a> - only css</li>
+                <li><a href="https://codepen.io/dawidgardzinski/pen/KKxemJQ">hamburger menu</a> - only css</li>
+                <li><a href="https://codepen.io/dawidgardzinski/pen/BaOVRbW">typer</a> - typescript</li>
+              </ul>
+            </div>
           </li>
           <li class="faq-list__item">
             <input id="question3" class="faq-checkbox" type="checkbox" >
-            <label for="question3" class="faq__question">Question 3
+            <label for="question3" class="faq__question">How can I get in touch with you?
             </label>
-            <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo voluptate est velit, nam sunt id officia temporibus, iste magnam adipisci voluptatibus doloremque eligendi eius hic aspernatur quae fugit, atque cumque?</p>
+            <div class="faq__answer">Through <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/">LinkedIn</a>.</div>
           </li>
           <li class="faq-list__item">
             <input id="question4" class="faq-checkbox" type="checkbox" >
-            <label for="question4" class="faq__question">Question 4
+            <label for="question4" class="faq__question">Are you currently looking for a job?
             </label>
-            <p class="faq__answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit optio molestiae aperiam nulla voluptatum tenetur veniam nemo assumenda, possimus accusantium excepturi dolor adipisci iure vitae ipsa commodi voluptatibus officia impedit?
-            Numquam, architecto. Fugit ipsa, sint deleniti qui maiores cum, unde eligendi illum eius, dolores assumenda adipisci officia! Amet saepe, enim itaque et in architecto non autem, dolores tempora, veniam dicta!</p>
+            <div class="faq__answer">Not actively, but you can always reach out to me on <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/">LinkedIn</a>. Maybe we can work something out.</div>
+          </li>
+          <li class="faq-list__item">
+            <input id="question5" class="faq-checkbox" type="checkbox" >
+            <label for="question5" class="faq__question">Where can I find more of your projects?
+            </label>
+            <div class="faq__answer">Here on my <a href="https://github.com/DawidGardzinski">Github</a>.</div>
           </li>
         </ul>
       </section>
