--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
       </section>
       <div id="parallax" class="parallax">
         <div class="parallax__layer parallax__layer--first">
-          <div class="parallax__layer-first-circle"></div>
         </div>
         <div class="parallax__layer parallax__layer--second">
-          <div class="parallax__layer-second-circle"></div>
         </div>
         <div class="parallax__layer parallax__layer--third">
-          <div class="parallax__layer-third-circle"></div>
+        </div>
+        <div class="parallax__layer parallax__layer--fourth">
         </div>
       </div>
       <div class="background-gradient"></div>
