optimize google fonts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dawid Gardziński</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet preload" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%C4%85%C4%87%C4%99%C5%82%C5%84%C3%B3%C5%9B%C5%BC%C5%BA" rel="stylesheet preload" as="style">
     <meta name="description" content="Web developer portfolio">
     <meta name="keywords" content="web, development, programmer, developer, backend, frontend">
     <meta name="author" content="Dawid Gardziński">
