--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
       </div>
       <div class="background-gradient"></div>
       <section id="about" class="about grid">
-        <h2 class="about__header">About me</h2>
-        <p class="about__text">I am a web developer who specializes in creating web applications. I have skills in both frontend design and development (HTML, CSS, TypeScript) as well as backend development (Node.js, PostgreSQL, MongoDB, Golang), allowing me to create comprehensive solutions for clients. I always prioritize the efficiency, usability, and scalability of projects, as well as constantly improving my skills. I have over 3 years of professional experience in programming and over 8 years of non-professional. </p>
+        <div class="about__content">
+          <h2 class="about__header">About me</h2>
+          <p class="about__text">I am a web developer who specializes in creating web applications. I have skills in both frontend design and development (HTML, CSS, TypeScript) as well as backend development (Node.js, PostgreSQL, MongoDB, Golang), allowing me to create comprehensive solutions for clients. I always prioritize the efficiency, usability, and scalability of projects, as well as constantly improving my skills. I have over 3 years of professional experience in programming and over 8 years of non-professional. </p>
+        </div>
         <div class="about__logo">
           <img class="about__image" width="300" height="300" src="src/images/logo-big.svg" alt="logo" >
         </div>
