--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <input id="question3" class="faq-checkbox" type="checkbox" >
             <label for="question3" class="faq__question">How can I get in touch with you?
             </label>
-            <div class="faq__answer">Through <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/">LinkedIn</a>.</div>
+            <div class="faq__answer">Through <a href="https://www.linkedin.com/in/dawid-gardzi%C5%84ski-649978174/">LinkedIn</a> or mail <a href="mailto:dawid@gardzinski.dev">dawid@gardzinski.dev</a>.</div>
           </li>
           <li class="faq-list__item">
             <input id="question4" class="faq-checkbox" type="checkbox" >
