add faq snippet

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                 <li><a href="https://codepen.io/dawidgardzinski/pen/QWVQKVq">parallax</a> - only css</li>
                 <li><a href="https://codepen.io/dawidgardzinski/pen/KKxemJQ">hamburger menu</a> - only css</li>
                 <li><a href="https://codepen.io/dawidgardzinski/pen/BaOVRbW">typer</a> - typescript</li>
+                <li><a href="https://codepen.io/dawidgardzinski/pen/abaQmjb">faq</a> - only css</li>
               </ul>
             </div>
           </li>
